saving title and links

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,25 @@
       input {
         display: block;
         height: 36px;
-        font-size: 24px;
+        width: 300px;
+        font-size: 12px;
         margin: 5px
+      }
+
+      #wrapper {
+        box-shadow: gray;
+        height: 450px;
+        width: 50%;
+        margin-left: 360px;
+        margin-bottom: 100px;
+        /* border: #42a5f5 2px solid; */
+        background-color: white;
+        border-radius: 10px;
+        padding: 7px;
+
+        box-shadow: 3px 5px 13px 2px #888888;
+        overflow: scroll;
+
       }
 
     </style>
@@ -29,7 +46,7 @@
     <div id='wrapper'>
       <h1>Liverpool FC News
       </h1>
-      <h3>New Articles</h3>
+
 
       <div id='article-title'></div>
       <div id='notes'></div>
