--- a/public/index.html
+++ b/public/index.html
@@ -5,44 +5,69 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
+      #input-form {
+
+        box-shadow: gray;
+        height: 350px;
+        width: 25%;
+        margin-left: 10px;
+        margin-bottom: 100px;
+        background-color: white;
+        border-radius: 10px;
+        padding: 7px;
+        box-shadow: 3px 5px 13px 2px #888888;
+
+      }
+
       input {
         display: block;
         height: 36px;
         width: 300px;
         font-size: 12px;
-        margin: 5px
+        margin: 5px;
+
       }
 
       #wrapper {
+        float: right;
         box-shadow: gray;
         height: 450px;
-        width: 50%;
+        margin-top: -466px;
+        width: 65%;
         margin-left: 360px;
         margin-bottom: 100px;
-        /* border: #42a5f5 2px solid; */
         background-color: white;
         border-radius: 10px;
         padding: 7px;
-
         box-shadow: 3px 5px 13px 2px #888888;
         overflow: scroll;
 
+      }
+
+      a {
+        color: red;
+        font-size: 20px;
       }
 
     </style>
   </head>
 
   <body>
-    <h1>Enter an article into the library</h1>
-    <form action="/submit" method="post">
-      <input type="text" name="titler" placeholder="title">
-      <input type="text" name="link" placeholder="link">
+    <div id="input-form">
+      <h1>Directions: Highlight an article title and link to save for later!</h1>
 
-      <input type="submit">
-      <a href="/articles">See your articles!</a>
-      <a href="/links">See your library of articles!</a>
-      <a href="/populated">See your library, populated with articles!</a>
-    </form>
+      <form action="/submit" method="post">
+        <input type="text" name="titler" placeholder="title">
+        <input type="text" name="link" placeholder="link">
+
+        <input type="submit">
+        <a href="/articles">See your articles!</a>
+        <br>
+        <a href="/links">See your library of articles!</a>
+        <br>
+        <a href="/populated">See your library populated with articles!</a>
+      </form>
+    </div>
     <div id='wrapper'>
       <h1>Liverpool FC News
       </h1>
